# RegistrationWorkflow

./: CMakeLists.txt  LICENSE.md  README.md
CreateRegisterLabel/: CMakeLists.txt  CreateRegisterLabel.py
CustomRegister/: CMakeLists.txt  CustomRegister.py
ListModuleParams/: CMakeLists.txt  ListModuleParams.py
LoadUltrasound/: CMakeLists.txt  LoadUltrasound.py
PreProcess/: CMakeLists.txt  PreProcess.py
T2Process/: CMakeLists.txt  T2Process.py
UltrasoundProcess/: CMakeLists.txt  UltrasoundProcess.py
experiments/numSamp_10trial_4labels/: combined_experiment_10trials.csv
